kubernetes/apps/base/arr/arr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr
  labels:
    app: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr
  template:
    metadata:
      labels:
        app: arr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.2.0@sha256:be596a2f896fdf15077af027f44500f73e1f6fb7b450a6494b37dd25b7cc5927
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 7878
              name: radarr
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: radarr-config
              mountPath: /config

        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.17@sha256:4ff5667a371e08b098858fa2457a99a5fef5f6a32640eb8567efe979d13ac9fc
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8989
              name: sonarr
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: sonarr-config
              mountPath: /config

        - name: prowlarr
          image: ghcr.io/home-operations/prowlarr:2.4.0@sha256:91af7cbc8e357dede960033c9ecfb3a65e145d90d4e495e13adb2fbc6a546807
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9696
              name: prowlarr
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
