kubernetes/apps/base/arr/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: web
      port: 8096
