kubernetes/apps/base/arr/radarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: sso-eg
      namespace: envoy-gateway-system
  hostnames:
    - radarr-base.home.parents-basement.win
  rules:
    - timeouts:
        request: 120s
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: arr
          port: 7878
